syntax = "proto3";

package PostLogin;

option go_package = "./proto;PostLogin";

service PostLogin {
	rpc PostLogin(PostLoginRequest) returns (PostLoginResponse) {}

}

message PostLoginRequest {
	string mobile = 1;
	string password=2;
}

message PostLoginResponse {
	string errno = 1;
	string err_msg=2;
	string sessionid=3;
}
